Añadido sprite, a falta de ajustes

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prueba de Juego Básico con Canvas</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/canva.js" defer></script>
   </head>
   <body>
-    <main>
-      <canvas id="gameCanvas" width="800" height="600">
-        Tu navegador no admite el elemento &lt;canvas&gt;.
-      </canvas>
-    </main>
+    <canvas id="gameCanvas">
+      Tu navegador no admite el elemento &lt;canvas&gt;.
+    </canvas>
   </body>
 </html>
